<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="share_your_thoughts_with_others">Share your thoughts with others</string>
    <string name="_0_450">0/450</string>
    <string name="name">Name</string>
    <string name="_4_stars">4 stars</string>
    <string name="tap_to_rate">Tap to rate</string>
    <string name="tell_us_more">Tell us more (option)</string>
    <string name="you_really_like_this_app">You really like this app</string>

</resources>