<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet_feedback"
    android:layout_gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_6"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_logo"
                android:layout_width="@dimen/dp_46"
                android:layout_height="@dimen/dp_46"
                android:src="@android:drawable/ic_lock_idle_alarm" />

            <TextView
                android:id="@+id/txt_name_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/tap_to_rate"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <RatingBar
            android:id="@+id/rt_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:numStars="5"
            android:scaleX="1"
            android:scaleY="1"
            android:stepSize="1"
            android:theme="@style/RatingBar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/tell_us_more"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_tell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/bg_editext"
            android:gravity="center|left"
            android:hint="@string/share_your_thoughts_with_others"
            android:maxLength="450"
            android:maxLines="20"
            android:minHeight="48dp"
            android:paddingLeft="6dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txt_count_character"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/_0_450"
            android:textColor="#000000"
            android:textSize="12sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_16">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_cancel"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/btnSend"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_send"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="#FFFFFF" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>